force-app/main/default/objects/CPQ_Settings__c/CPQ_Settings__c.object-meta.xml
<CustomObject>
    <label>CPQ Settings</label>
    <pluralLabel>CPQ Settings</pluralLabel>
    <nameField>
        <label>Setting Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>