force-app/main/default/objects/CPQ_Settings__c/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>