force-app/main/default/objects/CPQ_Settings__c/fields/Company_City__c.field-meta.xml
<CustomField>
    <fullName>Company_City__c</fullName>
    <label>City</label>
    <type>Text</type>
    <length>100</length>
</CustomField>