force-app/main/default/objects/CPQ_Settings__c/fields/Company_Country__c.field-meta.xml
<CustomField>
    <fullName>Company_Country__c</fullName>
    <label>Country</label>
    <type>Text</type>
    <length>100</length>
</CustomField>