force-app/main/default/objects/CPQ_Settings__c/fields/Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>