force-app/main/default/objects/CPQ_Settings__c/fields/Company_State__c.field-meta.xml
<CustomField>
    <fullName>Company_State__c</fullName>
    <label>State</label>
    <type>Text</type>
    <length>100</length>
</CustomField>