force-app/main/default/objects/CPQ_Settings__c/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>