force-app/main/default/objects/CPQ_Settings__c/fields/Company_Zip__c.field-meta.xml
<CustomField>
    <fullName>Company_Zip__c</fullName>
    <label>Zip Code</label>
    <type>Text</type>
    <length>20</length>
</CustomField>