force-app/main/default/objects/CPQ_Settings__c/fields/PDF_Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>PDF_Decimal_Places__c</fullName>
    <label>Decimal Places</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>2</defaultValue>
</CustomField>