force-app/main/default/objects/CPQ_Settings__c/fields/PDF_Detailed_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>PDF_Detailed_Line_Items__c</fullName>
    <label>Include Detailed Line Items</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>