force-app/main/default/objects/CPQ_Settings__c/fields/PDF_Footer_Text__c.field-meta.xml
<CustomField>
    <fullName>PDF_Footer_Text__c</fullName>
    <label>Footer Text</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>