force-app/main/default/objects/CPQ_Settings__c/fields/PDF_Format__c.field-meta.xml
<CustomField>
    <fullName>PDF_Format__c</fullName>
    <label>PDF Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Standard</fullName><label>Standard - Detailed layout with full information</label><default>true</default></value>
            <value><fullName>Compact</fullName><label>Compact - Summary layout</label><default>false</default></value>
            <value><fullName>Minimal</fullName><label>Minimal - Clean layout</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>