force-app/main/default/objects/CPQ_Settings__c/fields/PDF_Round_Values__c.field-meta.xml
<CustomField>
    <fullName>PDF_Round_Values__c</fullName>
    <label>Round All Values in PDF</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>