force-app/main/default/objects/CPQ_Settings__c/fields/PDF_Section_Layout__c.field-meta.xml
<CustomField>
    <fullName>PDF_Section_Layout__c</fullName>
    <label>PDF Section Layout JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>