force-app/main/default/objects/CPQ_Settings__c/fields/PDF_Show_Discount__c.field-meta.xml
<CustomField>
    <fullName>PDF_Show_Discount__c</fullName>
    <label>Show Discount Information</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>